update way of storing and manipulating with creation entity time fix tests